Animated object visibilty 1 frame off when turning on motion blur #49163

Closed
opened 2016-08-25 16:10:12 +02:00 by Gottfried Hofmann · 14 comments

System Information
Win7 x64 Geforce 980ti

Blender Version
Broken: blender-2.77.0-git.bfc5a94-windows64 buildbot
Worked: 2.77a official

Short description of error
Moving objects with animated render visibility show up one frame late when motion blur is turned on, thus the viewport and render show different results.
In 2.77a it still worked as expected.

Exact steps for others to reproduce the error
Open attached .blend -> render: 20160825.bug.visibility.simple.blend

**System Information** Win7 x64 Geforce 980ti **Blender Version** Broken: blender-2.77.0-git.bfc5a94-windows64 buildbot Worked: 2.77a official **Short description of error** Moving objects with animated render visibility show up one frame late when motion blur is turned on, thus the viewport and render show different results. In 2.77a it still worked as expected. **Exact steps for others to reproduce the error** Open attached .blend -> render: [20160825.bug.visibility.simple.blend](https://archive.blender.org/developer/F343275/20160825.bug.visibility.simple.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Added subscribers: @angavrilov, @Sergey, @mont29

Added subscribers: @angavrilov, @Sergey, @mont29
Alexander Gavrilov was assigned by Bastien Montagne 2016-08-26 10:56:44 +02:00

@angavrilov think you did some changes in this area in past months, mind having a look? Thanks.

@angavrilov think you did some changes in this area in past months, mind having a look? Thanks.

This is sort of by design: 1f19fba566

The reason is that Cycles cannot correctly render motion blur for objects that appear or disappear during the shutter window, so you can either hide them completely, or have rendering artifacts (specifically, object rendered as if it was perfectly stationary for half a frame). I'd argue that artifacts are worse, especially in case of a cloud of rapidly moving particles.

This is sort of by design: 1f19fba566 The reason is that Cycles cannot correctly render motion blur for objects that appear or disappear during the shutter window, so you can either hide them completely, or have rendering artifacts (specifically, object rendered as if it was perfectly stationary for half a frame). I'd argue that artifacts are worse, especially in case of a cloud of rapidly moving particles.

This is an example of those artifacts. They are very noticeable among other normally rendered particles, and even in the best case can only be removed by manual touch up of the image.

test-particle-mblur6.png

This is an example of those artifacts. They are very noticeable among other normally rendered particles, and even in the best case can only be removed by manual touch up of the image. ![test-particle-mblur6.png](https://archive.blender.org/developer/F343810/test-particle-mblur6.png)

I see the problem. But in case of normal objects this behaviour introduces a lot of new problems.

My current scene has many objects switched for others.
Here is the problem: If I animate the visibility so that one object appears when another one disappears, I get a frame without any object in it. So with the new behaviour I would need to make the new object appear one frame before the old one disappears if I want motion blur. But then I get the following problems:

a) I have to keyframe viewport visibilty differently because otherwise the objects would overlap in viewport
b) If I decide to render without motion blur, I have to change the visibility keyframe for all objects, that is overkill
c) playblasts have the overlay issue as well, so I would need to change keyframes for playblasts as well

All in all I got lots and lots of work to do and need lot of muscle memory and the benefit is almost invisible in my case :(

My proposed solution: Keep the old visibilityl behaviour for regular objects and the new one exclusively for particles.

I see the problem. But in case of normal objects this behaviour introduces a lot of new problems. My current scene has many objects switched for others. Here is the problem: If I animate the visibility so that one object appears when another one disappears, I get a frame without any object in it. So with the new behaviour I would need to make the new object appear one frame before the old one disappears if I want motion blur. But then I get the following problems: a) I have to keyframe viewport visibilty differently because otherwise the objects would overlap in viewport b) If I decide to render without motion blur, I have to change the visibility keyframe for all objects, that is overkill c) playblasts have the overlay issue as well, so I would need to change keyframes for playblasts as well All in all I got lots and lots of work to do and need lot of muscle memory and the benefit is almost invisible in my case :( My proposed solution: Keep the old visibilityl behaviour for regular objects and the new one exclusively for particles.

Added subscriber: @brecht

Added subscriber: @brecht

That's how my original patch worked, but @brecht decided to apply it to everything.

That's how my original patch worked, but @brecht decided to apply it to everything.
Alexander Gavrilov removed their assignment 2016-08-26 12:28:07 +02:00
Brecht Van Lommel was assigned by Alexander Gavrilov 2016-08-26 12:28:07 +02:00

This close to the release the safest approach may be to revert the modified version that applies to all objects, and apply my original that only works on particles. Changing the current code to only work on particles may be tricky, because it uses invalid transforms to store the state instead of separate bool flags that can just be safely ignored for non-particles.

This close to the release the safest approach may be to revert the modified version that applies to all objects, and apply my original that only works on particles. Changing the current code to only work on particles may be tricky, because it uses invalid transforms to store the state instead of separate bool flags that can just be safely ignored for non-particles.

This issue was referenced by blender/cycles@f7b6d417bb

This issue was referenced by blender/cycles@f7b6d417bb0f0d8836fb7f4895aecb5bef279968

This issue was referenced by 8a02c5fc62

This issue was referenced by 8a02c5fc62ca4d4aaddf787a21cbf3d2cbe3d8a5

I restricted it to particles again, but kept most of the current code because I want it to work in a more appropriate way for Cycles standalone. In that context is_particle does not clarify what it does exactly, and having to specify and sync separate valid_motion_pre and valid_motion_post is not ideal.

I restricted it to particles again, but kept most of the current code because I want it to work in a more appropriate way for Cycles standalone. In that context `is_particle` does not clarify what it does exactly, and having to specify and sync separate `valid_motion_pre` and `valid_motion_post` is not ideal.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49163
No description provided.