Fix T49163: let Cycles only hide particles with missing motion data, not regular objects.